# mac-gurl

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: release-please-config.json
.github/workflows/: build-and-publish.yaml  codeql.yml
mac_gurl/: adapter.py  gurl.py
tests/: conftest.py  test_lowlevel.py  test_requests.py
